--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -49,3 +49,10 @@
     display: flex;
     gap: 10px
 }
+
+.avatar{
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%
+}
