--- a/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/Areas/Admin/Views/Blogs/Create.cshtml
@@ -1,52 +1,62 @@
-﻿@model ShoeShop.Models.Blog
+﻿@model ShoeShop.Models.Blog;
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+}
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
+    <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
+    <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
+    <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
+    <script>Dashmix.helpersOnLoad(['jq-select2', 'js-ckeditor']);</script>
 }
 
 <h1>Create</h1>
 
 <h4>Blog</h4>
 <hr />
-<div class="row">
+<div class="row" width="100%">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
+            <div class="mb-4">
+                <label class="form-label" for="upload-image">Thumbnail</label>
+                <div class="upload-image-container">
+                    <input type="file" id="upload-image" name="upload-image" class="upload-image-input" hidden multiple />
+                    <div class="no-image">
+                        <p>Select files to upload</p>
+                    </div>
+                    <div class="has-image">
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CreatedAt" class="control-label"></label>
-                <input asp-for="CreatedAt" class="form-control" />
-                <span asp-validation-for="CreatedAt" class="text-danger"></span>
+
+            <div class="mb-4">
+                <label class="form-label" for="topic-id">Topic</label>
+                <select class="js-select2 form-select" id="topic-id" name="topic-id" data-placeholder="Choose topic..">
+                    <option></option>
+                    @foreach (var topic in ViewBag.Topics)
+                    {
+                        <option value="@topic.Id">@topic.Name</option>
+                    }
+                </select>
             </div>
             <div class="form-group">
-                <label asp-for="CreateBy" class="control-label"></label>
-                <input asp-for="CreateBy" class="form-control" />
-                <span asp-validation-for="CreateBy" class="text-danger"></span>
+                <div class="mb-4">
+                    <label class="form-label">Content</label>
+                    <textarea id="js-ckeditor" name="blog-content" width="100px"></textarea>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="TopicID" class="control-label"></label>
-                <select asp-for="TopicID" class ="form-control" asp-items="ViewBag.TopicID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDetele" /> @Html.DisplayNameFor(model => model.IsDetele)
-                </label>
-            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -58,6 +68,4 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
