--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -59,8 +59,8 @@
 				<div class="filter_col">
 					<div class="inner_bt"><a href="#" class="open_filters"><i class="ti-close"></i></a></div>
 					<div class="filter_type version_2">
-						<h4><a href="#filter_1" data-bs-toggle="collapse" class="opened">Categories</a></h4>
-						<div class="collapse show" id="filter_1">
+						<h4><a href="#categories" data-bs-toggle="collapse" class="opened">Categories</a></h4>
+						<div class="collapse show" id="categories">
 							<ul>
 								<li>
 									<label class="container_check">
