Add Product Seeder

--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -67,7 +67,9 @@
 	                    </div>
 	                    <div class="row">
 	                        <div class="col-lg-5 col-md-6">
-							<div class="price_main"><span class="new_price">$@product.Price</span><span class="percentage">-20%</span> <span class="old_price">$160.00</span></div>
+							<div class="price_main">
+								<span class="new_price product-price" data-price="@product.Price">$@product.Price</span>
+							<span class="percentage">-20%</span> <span class="old_price">$160.00</span></div>
 	                        </div>
 	                        <div class="col-lg-4 col-md-6">
 	                            <div class="btn_add_to_cart"><a href="#0" class="btn_1">Add to Cart</a></div>
