--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -337,12 +337,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-7">
-						<div class="item_panel">
-							<figure>
-								<img src="~/img/products/shoes/1.jpg" class="lazy" alt="">
-							</figure>
-							<h4>1x Armor Air X Fear</h4>
-							<div class="price_panel"><span class="new_price">$148.00</span><span class="percentage">-20%</span> <span class="old_price">$160.00</span></div>
+						<div class="item_panel pnl-cart">
 						</div>
 					</div>
 					<div class="col-md-5 btn_panel">
