--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -7,7 +7,7 @@
 }
 
 @section Scripts {
-	
+	<script src="~/js/cart.js"></script>
 }
 
 <main class="bg_gray">
@@ -30,6 +30,9 @@
 						Product
 					</th>
 					<th>
+						Color / Size
+					</th>
+					<th>
 						Price
 					</th>
 					<th>
@@ -43,77 +46,8 @@
 					</th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr>
-					<td>
-						<div class="thumb_cart">
-							<img src="~/img/products/shoes/1.jpg" alt="Image">
-						</div>
-						<span class="item_cart">Armor Air x Fear</span>
-					</td>
-					<td>
-						<strong>$140.00</strong>
-					</td>
-					<td>
-						<div class="numbers-row">
-							<input type="text" value="1" id="quantity_1" class="qty2" name="quantity_1">
-							<div class="inc button_inc">+</div><div class="dec button_inc">-</div>
-						</div>
-					</td>
-					<td>
-						<strong>$140.00</strong>
-					</td>
-					<td class="options">
-						<a href="#"><i class="ti-trash"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="thumb_cart">
-							<img src="~/img/products/shoes/2.jpg" alt="Image">
-						</div>
-						<span class="item_cart">Armor Okwahn II</span>
-					</td>
-					<td>
-						<strong>$110.00</strong>
-					</td>
-					<td>
-						<div class="numbers-row">
-							<input type="text" value="1" id="quantity_2" class="qty2" name="quantity_2">
-							<div class="inc button_inc">+</div><div class="dec button_inc">-</div>
-						</div>
-					</td>
-					<td>
-						<strong>$110.00</strong>
-					</td>
-					<td class="options">
-						<a href="#"><i class="ti-trash"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="thumb_cart">
-							<img src="~/img/products/shoes/3.jpg" alt="Image">
-						</div>
-						<span class="item_cart">Armor Air Wildwood ACG</span>
-					</td>
-					<td>
-						<strong>$90.00</strong>
-					</td>
-
-					<td>
-						<div class="numbers-row">
-							<input type="text" value="1" id="quantity_3" class="qty2" name="quantity_3">
-							<div class="inc button_inc">+</div><div class="dec button_inc">-</div>
-						</div>
-					</td>
-					<td>
-						<strong>$90.00</strong>
-					</td>
-					<td class="options">
-						<a href="#"><i class="ti-trash"></i></a>
-					</td>
-				</tr>
+			<tbody id="tbl-cart">
+				
 			</tbody>
 		</table>
 
