--- a/wwwroot/css/cart.css
+++ b/wwwroot/css/cart.css
@@ -16,16 +16,19 @@
 }
 
 .table.cart-list th:nth-child(1) {
-  width: 70%;
+  width: 50%;
 }
 .table.cart-list th:nth-child(2) {
   width: 15%;
 }
 .table.cart-list th:nth-child(3) {
-  width: 20%;
+  width: 10%;
 }
 .table.cart-list th:nth-child(4) {
-  width: 5%;
+  width: 15%;
+}
+.table.cart-list th:nth-child(5) {
+  width: 10%;
 }
 
 .table.cart-list td {
@@ -108,18 +111,22 @@
   }
 
   .table.cart-list td:nth-of-type(2):before {
-    content: "Price";
+    content: "Color / Size";
   }
 
   .table.cart-list td:nth-of-type(3):before {
-    content: "Quantity";
+    content: "Price";
   }
 
   .table.cart-list td:nth-of-type(4):before {
-    content: "Subtotal";
+    content: "Quantity";
   }
 
   .table.cart-list td:nth-of-type(5):before {
+    content: "Subtotal";
+  }
+
+  .table.cart-list td:nth-of-type(6):before {
     content: "Edit";
   }
 }
