--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -2207,22 +2207,22 @@ header ul.top_tools > li a.cart_bt:before {
   content: '\0042';
 }
 header ul.top_tools > li a.cart_bt strong {
-  font-size: 10px;
-  font-size: 0.625rem;
-  font-weight: 700;
-  width: 16px;
-  height: 16px;
-  text-indent: 0;
-  display: block;
-  text-align: center;
-  position: absolute;
-  bottom: 10px;
-  right: -3px;
-  line-height: 17px !important;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
+    font-size: 10px;
+    font-size: 0.625rem;
+    font-weight: 700;
+    width: 20px;
+    height: 20px;
+    text-indent: 0;
+    display: block;
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    right: -3px;
+    line-height: 20px !important;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
 }
 @media (max-width: 767px) {
   header ul.top_tools > li a.cart_bt strong {
@@ -2246,6 +2246,11 @@ header ul.top_tools > li .dropdown-access .dropdown-menu {
   font-size: 13px;
   font-size: 0.8125rem;
 }
+
+header ul.top_tools > li .dropdown-cart .dropdown-menu {
+    width: 360px;
+}
+
 @media (max-width: 991px) {
   header ul.top_tools > li .dropdown-cart .dropdown-menu,
   header ul.top_tools > li .dropdown-access .dropdown-menu {
@@ -2935,7 +2940,7 @@ nav a.open_close#close_in > i:hover {
   }
 }
 .dropdown-cart .dropdown-menu {
-  margin-left: -205px;
+  margin-left: -315px;
 }
 .dropdown-cart .dropdown-menu:before {
   right: 10%;
