--- a/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/Areas/Admin/Views/Blogs/Create.cshtml
@@ -49,7 +49,7 @@
 
             <div class="mb-4">
                 <label class="form-label" for="topic-id">Topic</label>
-                <select class="js-select2 form-select" id="topic-id" name="topic-id" style="width: 100%;" data-placeholder="Choose topic..">
+                <select class="js-select form-select " id="topic-id" name="topic-id" placeholder="Choose topic..">
                     <option></option>
                     @foreach (var topic in ViewBag.Topics)
                     {
