--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -117,6 +117,9 @@
 									<li>
 										<a asp-controller="Blog" asp-action="Index">Blog</a>
 									</li>
+									<li>
+										<a asp-controller="Home" asp-action="Contact">Contact</a>
+									</li>
 								</ul>
 							</div>
 							<!--/main-menu -->
