--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -9,6 +9,7 @@
 
 @section Scripts {
     <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
+    <script src="~/admin/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
     <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
@@ -34,9 +35,13 @@
                             <input type="text" class="form-control" id="product-name" name="product-name">
                         </div>
                         <div class="row mb-4">
-                            <div class="col-md-12">
-                                <label class="form-label" for="product-price">Price in USD ($)</label>
-                                <input type="text" class="form-control" id="product-price" name="product-price">
+                            <div class="col-md-6">
+                                <label class="form-label" for="product-price">Price ($)</label>
+                                <input type="number" class="form-control" id="product-price" name="product-price">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label" for="product-price-sale">Price sale ($)</label>
+                                <input type="number" class="form-control" id="product-price-sale" name="product-price-sale">
                             </div>
                         </div>
                         <div class="mb-4">
@@ -95,15 +100,32 @@
             <div class="block block-rounded">
                 <div class="block-content">
                     <div class="d-flex justify-content-between align-items-center mb-4">
-                        <label class="form-label">Active</label>
+                            <label class="form-label">Is featured?</label>
                         <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" value="" id="product-status" name="product-status" checked>
-                            <label class="form-check-label" for="product-status"></label>
+                                <input class="form-check-input" type="checkbox" value="" id="is-featured" name="is-featured">
+                                <label class="form-check-label" for="is-featured"></label>
                         </div>
                     </div>
+                        <div class="mb-4">
+                            <label class="form-label" for="product-slug">Slug</label>
+                            <input type="text" class="form-control" id="product-slug" name="product-slug">
+                        </div>
                     <div class="mb-4">
-                        <label class="form-label" for="product-slug">Slug</label>
-                        <input type="text" class="form-control" id="product-slug" name="product-slug">
+                        <label class="form-label" for="product-status">Status</label>
+                            <select class="js-select2 form-select" id="product-status" name="product-status" style="width: 100%;" data-placeholder="Choose status..">
+                            <option></option>
+                            <option value="1" selected>Published</option>
+                            <option value="0">Draft</option>
+                        </select>
+                    </div>
+                    <div class="mb-4">
+                        <label class="form-label" for="product-label">Label</label>
+                            <select class="js-select2 form-select" id="product-label" name="product-label" style="width: 100%;" data-placeholder="Choose label..">
+                            <option></option>
+                            <option value="0" selected>No label</option>
+                            <option value="1">New</option>
+                            <option value="2">Hot</option>
+                        </select>
                     </div>
                     <div class="mb-4">
                         <label class="form-label" for="brand-id">Brand</label>
