--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -105,213 +105,21 @@
 
 	<div class="container margin_60_35">
 		<div class="main_title">
-			<h2>Top Selling</h2>
+			<h2>Featured</h2>
 			<span>Products</span>
 			<p>Cum doctus civibus efficiantur in imperdiet deterruisset</p>
 		</div>
-		<div class="row small-gutters">
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<figure>
-						<span class="ribbon off">-30%</span>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/1.jpg" alt="">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/2.jpg" alt="">
-						</a>
-						<div data-countdown="2019/05/15" class="countdown"></div>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor Air x Fear</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$48.00</span>
-						<span class="old_price">$60.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
+		<div class="owl-carousel owl-theme products_carousel">
+			@foreach(var p in ViewBag.Featured)
+			{
+				<div class="item">
+					@await Component.InvokeAsync("ShoeCards", p)
 				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<span class="ribbon off">-30%</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/2.jpg" alt="">
-						</a>
-						<div data-countdown="2019/05/10" class="countdown"></div>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor Okwahn II</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$90.00</span>
-						<span class="old_price">$170.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<span class="ribbon off">-50%</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/3.jpg" alt="">
-						</a>
-						<div data-countdown="2019/05/21" class="countdown"></div>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor Air Wildwood ACG</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$75.00</span>
-						<span class="old_price">$155.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<span class="ribbon new">New</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/4.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor ACG React Terra</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$110.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<span class="ribbon new">New</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/5.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor Air Zoom Alpha</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$140.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<span class="ribbon new">New</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/6.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor Air Alpha</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$130.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<span class="ribbon hot">Hot</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/7.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor Air Max 98</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$115.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
-			<div class="col-6 col-md-4 col-xl-3">
-				<div class="grid_item">
-					<span class="ribbon hot">Hot</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="img-fluid lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Armor Air Max 720</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$120.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /col -->
+			}
 		</div>
-		<!-- /row -->
+		<!-- /products_carousel -->
 	</div>
+	
 	<!-- /container -->
 
 	<div class="featured lazy" data-bg="url(img/featured_home.jpg)">
@@ -337,136 +145,21 @@
 
 	<div class="container margin_60_35">
 		<div class="main_title">
-			<h2>Featured</h2>
+			<h2>New Product</h2>
 			<span>Products</span>
 			<p>Cum doctus civibus efficiantur in imperdiet deterruisset</p>
 		</div>
-		<div class="owl-carousel owl-theme products_carousel">
-			<div class="item">
-				<div class="grid_item">
-					<span class="ribbon new">New</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/4.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>ACG React Terra</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$110.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
+		<div class="row small-gutters">
+			@foreach(var p in ViewBag.NewProduct)
+			{
+				<div class="col-6 col-md-4 col-xl-3">
+					@await Component.InvokeAsync("ShoeCards", p)
 				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /item -->
-			<div class="item">
-				<div class="grid_item">
-					<span class="ribbon new">New</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/5.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Air Zoom Alpha</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$140.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /item -->
-			<div class="item">
-				<div class="grid_item">
-					<span class="ribbon hot">Hot</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Air Color 720</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$120.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /item -->
-			<div class="item">
-				<div class="grid_item">
-					<span class="ribbon off">-30%</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/2.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Okwahn II</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$90.00</span>
-						<span class="old_price">$170.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /item -->
-			<div class="item">
-				<div class="grid_item">
-					<span class="ribbon off">-50%</span>
-					<figure>
-						<a href="product-detail-1.html">
-							<img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/3.jpg" alt="">
-						</a>
-					</figure>
-					<div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-					<a href="product-detail-1.html">
-						<h3>Air Wildwood ACG</h3>
-					</a>
-					<div class="price_box">
-						<span class="new_price">$75.00</span>
-						<span class="old_price">$155.00</span>
-					</div>
-					<ul>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-						<li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-					</ul>
-				</div>
-				<!-- /grid_item -->
-			</div>
-			<!-- /item -->
+			}
 		</div>
-		<!-- /products_carousel -->
+		<!-- /row -->
 	</div>
+	
 	<!-- /container -->
 
 	<div class="bg_gray">
