--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -68,8 +68,17 @@
 	                    <div class="row">
 	                        <div class="col-lg-5 col-md-6">
 							<div class="price_main">
-								<span class="new_price product-price" data-price="@product.Price">$@product.Price</span>
-							<span class="percentage">-20%</span> <span class="old_price">$160.00</span></div>
+								@if (@product.PriceSale != 0)
+								{
+									var percent = 100 - (int)Math.Round((product.PriceSale / product.Price) * 100);
+									<span class="new_price product-price" data-price="@product.PriceSale">$@product.PriceSale</span>
+									<span class="percentage">-@percent %</span>
+									<span class="old_price">$@product.Price</span>
+								} else
+								{
+									<span class="new_price product-price" data-price="@product.Price">$@product.Price</span>
+								}
+							</div>
 	                        </div>
 	                        <div class="col-lg-4 col-md-6">
 	                            <div class="btn_add_to_cart"><a href="#0" class="btn_1">Add to Cart</a></div>
@@ -137,35 +146,9 @@
 	                    <div id="collapse-A" class="collapse" role="tabpanel" aria-labelledby="heading-A">
 	                        <div class="card-body">
 	                            <div class="row justify-content-between">
-	                                <div class="col-lg-6">
+	                                <div class="col-lg-12">
 	                                    <h3>Details</h3>
 										@Html.Raw(product.Description)
-	                                </div>
-	                                <div class="col-lg-5">
-	                                    <h3>Specifications</h3>
-	                                    <div class="table-responsive">
-	                                        <table class="table table-sm table-striped">
-	                                            <tbody>
-	                                                <tr>
-	                                                    <td><strong>Color</strong></td>
-	                                                    <td>Blue, Purple</td>
-	                                                </tr>
-	                                                <tr>
-	                                                    <td><strong>Size</strong></td>
-	                                                    <td>150x100x100</td>
-	                                                </tr>
-	                                                <tr>
-	                                                    <td><strong>Weight</strong></td>
-	                                                    <td>0.6kg</td>
-	                                                </tr>
-	                                                <tr>
-	                                                    <td><strong>Manifacturer</strong></td>
-	                                                    <td>Manifacturer</td>
-	                                                </tr>
-	                                            </tbody>
-	                                        </table>
-	                                    </div>
-	                                    <!-- /table-responsive -->
 	                                </div>
 	                            </div>
 	                        </div>
@@ -248,128 +231,12 @@
 	            <p>Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
 	        </div>
 	        <div class="owl-carousel owl-theme products_carousel">
-	            <div class="item">
-	                <div class="grid_item">
-	                    <span class="ribbon new">New</span>
-	                    <figure>
-	                        <a href="product-detail-1.html">
-	                            <img src="~/img/products/shoes/1.jpg" alt="">
-	                        </a>
-	                    </figure>
-	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-	                    <a href="product-detail-1.html">
-	                        <h3>ACG React Terra</h3>
-	                    </a>
-	                    <div class="price_box">
-	                        <span class="new_price">$110.00</span>
-	                    </div>
-	                    <ul>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-	                    </ul>
-	                </div>
-	                <!-- /grid_item -->
-	            </div>
-	            <!-- /item -->
-	            <div class="item">
-	                <div class="grid_item">
-	                    <span class="ribbon new">New</span>
-	                    <figure>
-	                        <a href="product-detail-1.html">
-								<img src="~/img/products/shoes/2.jpg" alt="">
-	                        </a>
-	                    </figure>
-	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-	                    <a href="product-detail-1.html">
-	                        <h3>Air Zoom Alpha</h3>
-	                    </a>
-	                    <div class="price_box">
-	                        <span class="new_price">$140.00</span>
-	                    </div>
-	                    <ul>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-	                    </ul>
-	                </div>
-	                <!-- /grid_item -->
-	            </div>
-	            <!-- /item -->
-	            <div class="item">
-	                <div class="grid_item">
-	                    <span class="ribbon hot">Hot</span>
-	                    <figure>
-	                        <a href="product-detail-1.html">
-								<img src="~/img/products/shoes/3.jpg" alt="">
-	                        </a>
-	                    </figure>
-	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-	                    <a href="product-detail-1.html">
-	                        <h3>Air Color 720</h3>
-	                    </a>
-	                    <div class="price_box">
-	                        <span class="new_price">$120.00</span>
-	                    </div>
-	                    <ul>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-	                    </ul>
-	                </div>
-	                <!-- /grid_item -->
-	            </div>
-	            <!-- /item -->
-	            <div class="item">
-	                <div class="grid_item">
-	                    <span class="ribbon off">-30%</span>
-	                    <figure>
-	                        <a href="product-detail-1.html">
-								<img src="~/img/products/shoes/4.jpg" alt="">
-	                        </a>
-	                    </figure>
-	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-	                    <a href="product-detail-1.html">
-	                        <h3>Okwahn II</h3>
-	                    </a>
-	                    <div class="price_box">
-	                        <span class="new_price">$90.00</span>
-	                        <span class="old_price">$170.00</span>
-	                    </div>
-	                    <ul>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-	                    </ul>
-	                </div>
-	                <!-- /grid_item -->
-	            </div>
-	            <!-- /item -->
-	            <div class="item">
-	                <div class="grid_item">
-	                    <span class="ribbon off">-50%</span>
-	                    <figure>
-	                        <a href="product-detail-1.html">
-	                            <img class="owl-lazy" src="~/img/products/product_placeholder_square_medium.jpg" data-src="~/img/products/shoes/3.jpg" alt="">
-	                        </a>
-	                    </figure>
-	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
-	                    <a href="product-detail-1.html">
-	                        <h3>Air Wildwood ACG</h3>
-	                    </a>
-	                    <div class="price_box">
-	                        <span class="new_price">$75.00</span>
-	                        <span class="old_price">$155.00</span>
-	                    </div>
-	                    <ul>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to compare"><i class="ti-control-shuffle"></i><span>Add to compare</span></a></li>
-	                        <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="left" title="Add to cart"><i class="ti-shopping-cart"></i><span>Add to cart</span></a></li>
-	                    </ul>
-	                </div>
-	                <!-- /grid_item -->
-	            </div>
-	            <!-- /item -->
+				@foreach (var item in ViewBag.Related)
+				{
+					<div class="item">
+						@await Component.InvokeAsync("ShoeCards", item)
+					</div>
+				}
 	        </div>
 	        <!-- /products_carousel -->
 	    </div>
