--- a/Views/Shared/Components/ShoeCards/Default.cshtml
+++ b/Views/Shared/Components/ShoeCards/Default.cshtml
@@ -1,18 +1,35 @@
 ﻿@model Product;
-<div class="col-6 col-md-4">
-	<div class="grid_item">
-@* 	<span class="ribbon off">-30%</span> *@
+<div class="grid_item">
+	@if (Model.PriceSale != 0)
+	{
+		var roundedPercentage = 100 - (int)Math.Round((Model.PriceSale / Model.Price) * 100);
+		<span class="ribbon off">-@roundedPercentage%</span>
+	}
+	else
+	{
+		if (Model.Label == 1)
+		{
+			<span class="ribbon new">New</span>
+		}
+		else if (Model.Label == 2)
+		{
+			<span class="ribbon hot">Hot</span>
+		}
+	}
 	<figure>
-			<a asp-controller="Product" asp-action="Detail" asp-route-id="@Model.Id">
-				<img class="img-fluid" src="~/img/products/@Model.Thumbnail.Name" alt="">
-			</a>
-	</figure>
 		<a asp-controller="Product" asp-action="Detail" asp-route-id="@Model.Id">
-			<h3>@Model.Name</h3>
+			<img class="img-fluid" src="~/img/products/@Model.Thumbnail.Name" alt="">
 		</a>
+	</figure>
+	<a asp-controller="Product" asp-action="Detail" asp-route-id="@Model.Id">
+		<h3>@Model.Name</h3>
+	</a>
 	<div class="price_box">
+		@if(Model.PriceSale != 0) {
+			<span class="new_price">$@Model.PriceSale.ToString("0.00")</span>
+			<span class="old_price">$@Model.Price.ToString("0.00")</span>
+		} else {
 			<span class="new_price">$@Model.Price.ToString("0.00")</span>
-			@* <span class="old_price">$@Model.OldPrice.ToString("0.00")</span> *@
-	</div>
+		}
 	</div>
 </div>
